<resources>
    <string name="app_name" translatable="false">Muvlex</string>
    <string name="active_language">English</string>
    <string name="select_language">Select language</string>
    <string name="search">Search</string>
    <string name="log_in">Log in</string>
    <string name="email_or_username">Email or username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="get_help">Get help</string>
    <string name="email_address">Email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="next">Next</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="_continue">Continue</string>
    <string name="welcome_to_muvlex">Welcome to Muvlex</string>
    <string name="pick_a_username_for_your_account_you_can_always_change_it_later">
        Pick a username for your account. You can always change it later.
    </string>
    <string name="username">Username</string>
    <string name="by_clicking_next_you_agree_to_our_privacy_policy_terms_conditions">
        By clicking Next, you agree to our <b>Privacy Policy</b>, <b>Terms &amp; Conditions</b>.
    </string>
    <string name="username_not_available">Username not available</string>
    <string name="username_can_only_use_letters_numbers_underscores_and_periods">
        Username can only use letters, numbers, underscores, and periods
    </string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="success">Success</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="enter_your_username_or_the_email_linked_to_your_account">
        Enter your username or the email linked to your account.
    </string>
    <string name="okay">Okay</string>
    <string name="resend">Resend</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="users">Users</string>
    <string name="searching_for">Searching for</string>
    <string name="no_results_found_for">No Results Found for</string>
    <string name="unknown">Unknown</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="share_your_thoughts_with_other">Share your thoughts with others</string>
    <string name="write_a_review">Write a review</string>
    <string name="overview">Overview</string>
    <string name="post">Post</string>
    <string name="reviews_are_public_and_editable">Reviews are public and editable</string>
    <string name="the_name_and_photo_on_your_muvlex_profile_will_appear_with_your_review_please_do_a_fair_rate_and_write_a_relevant_review_about_the_movie_or_series_so_the_other_users_can_get_benefit_from_it">The name and photo on your Muvlex profile will appear with your review. Please, do a fair rate and write a relevant review about the movie or series so the other users can get benefit from it.</string>
    <string name="got_it">Got it</string>
    <string name="learn_more">Learn more</string>
    <string name="describe_your_experience_optional">Describe your experience (optional)</string>
    <string name="discard_draft">Discard draft?</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="rate_this_series">Rate this series</string>
    <string name="blank_message" translatable="false"> </string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_result_will_appear_here">Search result will appear here</string>
    <string name="users_posts_will_appear_here">User\'s posts will appear here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_posts_will_appear_here">Your posts will appear here</string>
    <string name="sign_out">Sign out</string>
    <string name="posts_will_appear_here">Posts will appear here</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="creating_user">Creating user</string>
    <string name="your_account_is_successfully_created_verify_your_account_by_checking_your_email_address">
        Your account is successfully created, verify your account by checking your email address.
    </string>
    <string name="saving">Saving</string>
    <string name="sending_verification_code">Sending verification</string>
    <string name="checking_username">Checking username</string>
    <string name="logging_in">Logging in</string>
    <string name="loading_user_data">Loading data</string>
    <string name="sending_password_reset_email">Sending password reset</string>
    <string name="follow_the_link_we_have_sent_to_your_email_address_to_reset_your_muvlex_password">
        Follow the link we have sent to your email address to reset your Muvlex password.
    </string>
    <string name="sorry_we_were_unable_to_log_in_to_your_account_due_to_email_verification_verify_your_email_to_continue">
        Sorry, we were unable to log in to your account due to email verification. Verify your email to continue.
    </string>
    <string name="logo">Logo</string>
    <string name="change_language">Change language</string>
    <string name="back">Back</string>
    <string name="poster">Poster</string>
    <string name="star">Star</string>
    <string name="calendar">Calendar</string>
    <string name="vote_average">Vote average</string>
    <string name="genre">Genre</string>
    <string name="language">Language</string>
    <string name="profile_picture">Profile picture</string>
    <string name="error">Error</string>
    <string name="ratings_and_review_on_the_muvlex">Ratings &amp; review on the Muvlex</string>
    <string name="ratings_and_review_on_the_muvlex_content">
        On this page, you can find information about Muvlex\'s policies for posting reviews.
        \nYou can write reviews for anything that you\'ve watched.
         Reviews are a great way to help others decide what to watch by telling them about your experience.
         Muvlex doesn\'t pay anyone to rate or review content on Muvlex, and we expect reviewers to be honest and unbiased.
    </string>
    <string name="ratings_and_reviews_posting_policies">Ratings and reviews posting policies</string>
    <string name="ratings_and_reviews_posting_policies_content">
        Ratings and reviews are meant to be helpful and trustworthy.
         Reviewing content on Muvlex is a great way to share helpful feedback and assist other Muvlex users in finding great content, movies &amp; series.
        \nGuidelines for writing a good review
        \n* Make your reviews useful and informative.
        \n* Try to include both positives and drawbacks.
        \n* Keep it readable; check grammar and spelling, and don\'t use excessive capitalization and punctuation.
        \n* Be nice to others.
        \nMuvlex\'s policies for ratings and reviews are below.
         Reviews that don\'t follow these policies will be removed, and anyone who repeatedly or egregiously violates them may lose the ability to post reviews on Muvlex.
    </string>
    <string name="spam_and_fake_reviews">Spam and fake reviews</string>
    <string name="spam_and_fake_reviews_content">
        Your reviews should reflect the experiences that you\'ve had with the content, movie &amp; series that you\'re reviewing.
        \n* Don\'t post fake or inaccurate reviews.
        \n* Don\'t post the same review multiple times.
        \n* Don\'t post reviews for the same content from multiple accounts.
        \n* Don\'t post reviews to mislead other users or manipulate the rating.
        \n* Don\'t post reviews on behalf of others.
        \n* Don\'t misrepresent your identity or your connection to the content that you\'re reviewing.
    </string>
    <string name="off_topic_reviews">Off-topic reviews</string>
    <string name="off_topic_reviews_content">
        Keep reviews on-topic and relevant to the content, service, or experience that you\'re reviewing.
        \n* Don\'t post solicitations, political, or social commentary or anything else that is irrelevant to the content, service, or experience that you\'re reviewing.
    </string>
    <string name="advertising">Advertising</string>
    <string name="advertising_content">
        We want reviews to be useful, and they aren\'t useful if they\'re promoting something other than the content or service that you\'re reviewing.
        \n* Don\'t post promotional or commercial content for any products or services, including affiliate or referral-based promotions.
        \n* Don\'t post phone numbers, email addresses, or links to other websites.
    </string>
    <string name="conflict_of_interest">Conflict of interest</string>
    <string name="conflict_of_interest_content">
        Reviews are most valuable when they\'re genuine and unbiased.
         They should be written by people who aren\'t motivated by financial gain.
        \n* Don\'t offer or accept money, products, or services in exchange for posting reviews.
        \n* Don\'t review content, movies &amp; series or experiences if you own or work for the business that created it.
    </string>
    <string name="copyrighted_content">Copyrighted content</string>
    <string name="copyrighted_content_content">
        Reviews should be your own and reflect your personal opinions.
        \n* Don\'t post reviews that infringe on the intellectual property rights of others, including copyright.
    </string>
    <string name="personal_and_confidential_information">Personal and confidential information</string>
    <string name="personal_and_confidential_information_content">
        Reviews are meant to share experiences, and you can express the way that you feel about something without revealing sensitive personal information.
        \n* Don\'t post personal or confidential information, such as a physical address or driver\'s license number.
    </string>
    <string name="illegal_content">Illegal content</string>
    <string name="illegal_content_content">
        Your reviews must comply with the law and any terms or legal agreements that you have agreed to.
        \n* Don\'t post reviews that contain or link to illegal content.
    </string>
    <string name="sexually_explicit_content">Sexually explicit content</string>
    <string name="sexually_explicit_content_content">
        Muvlex is intended for a broad audience, and reviews should reflect that.
        \n* Don\'t post reviews that contain, promote, or solicit sexually explicit content.
        \n* Don\'t  post reviews that depict children in sexual situations or address them in a sexual manner.
    </string>
    <string name="hate_speech">Hate speech</string>
    <string name="hate_speech_content">
        Muvlex is intended for all people, and reviews should reflect that.
        \n* Don\'t promote violence, condone violence or incite hatred against an individual or group based on their race, nationality, ethnic origin, religion, gender, gender identity, sexual orientation, age, disability, veteran status, or any other characteristic that is associated with systemic discrimination or marginalization.
    </string>
    <string name="offensive_reviews">Offensive reviews</string>
    <string name="offensive_reviews_content">
        Muvlex is meant to entertain and inform, not attack and offend.
        \n* Don\'t post obscene, profane, or offensive language.
        \n* Don\'t post reviews that harass, bully or attack others.
    </string>
</resources>