<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.martiandeveloper.muvlex.viewmodel.authentication.GetHelpViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/success"
            app:srcCompat="@drawable/ic_success" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/StyleRegularTextView"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/follow_the_link_we_have_sent_to_your_email_address_to_reset_your_muvlex_password"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            style="@style/StyleSupremeButton"
            android:layout_marginTop="24dp"
            android:onClick="@{()->viewModel.onOkayMBTNClick()}"
            android:text="@string/okay" />

    </LinearLayout>

</layout>
