<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.martiandeveloper.muvlex.viewmodel.authentication.GetHelpViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".view.authentication.GetHelpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/StyleSupremeMaterialTextView"
                android:text="@string/find_your_account" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/StyleRegularMaterialTextView"
                android:layout_marginTop="24dp"
                android:text="@string/enter_your_username_or_the_email_linked_to_your_account"
                android:textAlignment="center"
                android:textColor="@color/color_supreme_text_seventy_percent"
                android:textSize="16sp" />

            <EditText
                style="@style/StyleRegularEditText"
                android:layout_marginTop="32dp"
                android:digits="qwertyuiopasdfghjklzxcvbnm1234567890,./?;:'\|[{]}=+-_)(*^%$#@!~"
                android:hint="@string/email_or_username"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:longClickable="false"
                android:singleLine="true"
                android:text="@={viewModel.emailOrUsernameETText}"
                tools:ignore="Autofill" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_get_help_continueMBTN"
                style="@style/StyleSupremeMaterialButton"
                android:layout_marginTop="24dp"
                android:onClick="@{()->viewModel.onContinueMBTNClick()}"
                android:text="@string/_continue" />

        </LinearLayout>

    </ScrollView>

</layout>
