<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="logInViewModel"
            type="com.martiandeveloper.muvlex.viewmodel.authentication.LogInViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ProgressBar
            style="@style/StyleSupremeProgressbar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:visibility="@{logInViewModel.errorADPBGone ? View.GONE : View.VISIBLE}" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/success"
            android:visibility="@{logInViewModel.errorADIVGone ? View.GONE : View.VISIBLE}"
            app:srcCompat="@drawable/ic_error" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/StyleRegularTextView"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/sorry_we_were_unable_to_log_in_to_your_account_due_to_email_verification_verify_your_email_to_continue"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_email_not_verified_resendMBTN"
                style="@style/StyleSupremeButton"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="@{()->logInViewModel.onResendMBTNClick()}"
                android:text="@string/resend" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_email_not_verified_okayMBTN"
                style="@style/StyleSupremeButton"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:onClick="@{()->logInViewModel.onOkayMBTNClick()}"
                android:text="@string/okay" />

        </LinearLayout>

    </LinearLayout>

</layout>
