<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.martiandeveloper.muvlex.viewmodel.feed.SeriesDetailViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/StyleRegularMaterialTextView"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/discard_draft"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="24dp">

            <com.google.android.material.textview.MaterialTextView
                style="@style/StyleRegularMaterialTextView"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onKeepMTVClick()}"
                android:padding="16dp"
                android:text="@string/keep"
                android:textColor="@color/color_regular_action"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/StyleRegularMaterialTextView"
                android:background="?android:attr/selectableItemBackground"
                android:onClick="@{()->viewModel.onDiscardMTVClick()}"
                android:padding="16dp"
                android:text="@string/discard"
                android:textColor="@color/color_regular_action"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</layout>
