<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="signUpViewModel"
            type="com.martiandeveloper.muvlex.viewmodel.authentication.SignUpViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <ProgressBar
            style="@style/StyleSupremeProgressbar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:visibility="@{signUpViewModel.isSuccessDialogProgressGone() ? View.GONE : View.VISIBLE}" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/success"
            android:visibility="@{signUpViewModel.isSuccessDialogImageGone() ? View.GONE : View.VISIBLE}"
            app:srcCompat="@drawable/ic_success" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/StyleRegularTextView"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/your_account_is_successfully_created_verify_your_account_by_checking_your_email_address"
            android:textAlignment="center"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_sign_up_verification_continueMBTN"
            style="@style/StyleSupremeButton"
            android:layout_marginTop="24dp"
            android:onClick="@{()->signUpViewModel.onContinueButtonClick()}"
            android:text="@string/_continue" />

    </LinearLayout>

</layout>
